-- bugfix: submenu not visible skin  "left blue"/"right blue"

--- a/www/style/style.default.css
+++ b/www/style/style.default.css
@@ -288,7 +288,6 @@ a {
   background-color: #336699;
   z-index: 101;
   border-bottom: 1px solid #000000;
-  display: none;
 }
 
 #navbar_sub {
